DevOCL/src/objects/OCLQS_Integration_Settings__mdt.object
<CustomObject>
    <description>Store environment related integration parameters
Integration Team</description>
    <fields>
        <fullName>Attribute_1_Description__c</fullName>
        <label>Attribute 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_1_Value__c</fullName>
        <label>Attribute 1 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_2_Description__c</fullName>
        <label>Attribute 2 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_2_Value__c</fullName>
        <label>Attribute 2 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_3_Description__c</fullName>
        <label>Attribute 3 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_3_Value__c</fullName>
        <label>Attribute 3 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <description>Name of SFDC environment for which integration connection details are captured</description>
        <label>Environment Name</label>
        <picklist>
            <picklistValues>
                <fullName>DEV</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCK-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCK-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Connection_Port__c</fullName>
        <description>Target environment connection port number</description>
        <label>Target Connection Port</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Connection_URL__c</fullName>
        <description>Target environment connection url</description>
        <label>Target Connection URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Credentail_Token_OAuth_Key__c</fullName>
        <label>Target Credentail Token/OAuth Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Credentail_User_Id__c</fullName>
        <label>Target Credentail User Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Credentail_User_Password__c</fullName>
        <label>Target Credentail User Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>